# vk-triangle

./: CMakeLists.txt  README.md
shaders/: simple.frag  simple.vert
src/: common.h  main.cc  render.cc  render.h  setup.cc  setup.h
